problema de padding corrigido

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Noticias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale conosco</a>
+        <a href="#">Contato</a>
     </nav>
     <main> 
         <article> <!--meu artigo, dentro dele posso ter coisas paralelas, mas tambem posso tem mais artigos-->
